gitops/infrastructure/monitoring/kubernetes-dashboard/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kubernetes-dashboard-virtualservice
  namespace: kubernetes-dashboard
spec:
  hosts:
    - "lixiaojun.io"
  gateways:
    - istio-system/demo-gateway
  http:
    - match:
        - uri:
            prefix: "/dashboard"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: kubernetes-dashboard.kubernetes-dashboard.svc.cluster.local
            port:
              number: 443
